--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,11 @@ default_envs = esp32_tx
 
 [env]
 framework = arduino
+build_flags =
+    -DHC12_SET_PIN=12
 lib_deps =
-    honzakucera/HC-12@^1.0.2
+
+lib_ldf_mode = chain+
 
 ; ESP32
 [esp32]
@@ -96,10 +99,10 @@ build_flags =
 lib_deps =
     ${esp8266.lib_deps}
 
-upload_port = /dev/ttyUSB0
+; upload_port = /dev/ttyUSB1
 upload_speed = 921600
 
-monitor_port = /dev/ttyUSB0
+; monitor_port = /dev/ttyUSB2
 monitor_speed = 115200
 
 [env:esp8266_tx]
