--- a/platformio.ini
+++ b/platformio.ini
@@ -99,10 +99,10 @@ build_flags =
 lib_deps =
     ${esp8266.lib_deps}
 
-; upload_port = /dev/ttyUSB1
+upload_port = /dev/ttyUSB0
 upload_speed = 921600
 
-; monitor_port = /dev/ttyUSB2
+monitor_port = /dev/ttyUSB0
 monitor_speed = 115200
 
 [env:esp8266_tx]
