--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = esp32_tx
+default_envs = esp8266
 
 [env]
 framework = arduino
 build_flags =
-    -DHC12_SET_PIN=12
 lib_deps =
 
 lib_ldf_mode = chain+
@@ -38,86 +37,32 @@ lib_deps =
     ${env.lib_deps}
     plerup/EspSoftwareSerial@^8.2.0
 
-[env:receiver]
-build_flags = 
-    -DRECEIVER
-
-[env:transmitter]
-build_flags = 
-    -DTRANSMITTER
-
 ; =========================================================
 ;                          BOARDS
 ; ========================================================= 
 
-[env:esp32_rx]
+[env:esp32]
 extends = 
     esp32
-    env:receiver
 
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
-    ${env:receiver.build_flags}
 
 lib_deps =
     ${esp32.lib_deps}
 
-upload_port = /dev/ttyUSB0
 upload_speed = 921600
 
-monitor_port = /dev/ttyUSB0
-monitor_speed = 115200
-
-[env:esp32_tx]
-extends = 
-    esp32
-    env:transmitter
-
-build_flags =
-    ${env.build_flags}
-    ${esp32.build_flags}
-    ${env:transmitter.build_flags}
-
-lib_deps =
-    ${esp32.lib_deps}
-
-upload_port = /dev/ttyUSB1
-upload_speed = 921600
-
-monitor_port = /dev/ttyUSB1
-monitor_speed = 115200
-
-[env:esp8266_rx]
+[env:esp8266]
 extends = 
     esp8266
-    env:receiver
+
 build_flags =
     ${env.build_flags}
     ${esp8266.build_flags}
-    ${env:receiver.build_flags}
+
 lib_deps =
     ${esp8266.lib_deps}
 
-upload_port = /dev/ttyUSB0
 upload_speed = 921600
-
-monitor_port = /dev/ttyUSB0
-monitor_speed = 115200
-
-[env:esp8266_tx]
-extends = 
-    esp8266
-    env:transmitter
-build_flags =
-    ${env.build_flags}
-    ${esp8266.build_flags}
-    ${env:transmitter.build_flags}
-lib_deps =
-    ${esp8266.lib_deps}
-upload_port = /dev/ttyUSB1
-upload_speed = 921600
-
-monitor_port = /dev/ttyUSB1
-monitor_speed = 115200
-; =========================================================
