updated build.sh and something else

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,9 @@ default_envs = esp8266
 framework = arduino
 build_flags =
 lib_deps =
-
 lib_ldf_mode = chain+
+monitor_speed = 115200
+upload_speed = 921600
 
 ; ESP32
 [esp32]
@@ -52,7 +53,8 @@ build_flags =
 lib_deps =
     ${esp32.lib_deps}
 
-upload_speed = 921600
+upload_speed = ${env.upload_speed}
+monitor_speed = ${env.monitor_speed}
 
 [env:esp8266]
 extends = 
@@ -65,4 +67,9 @@ build_flags =
 lib_deps =
     ${esp8266.lib_deps}
 
-upload_speed = 921600
+upload_speed = ${env.upload_speed}
+monitor_speed = ${env.monitor_speed}
+
+; =========================================================
+;                          END
+; =========================================================
