--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ default_envs = esp8266
 framework = arduino
 build_flags =
 lib_deps =
+    bblanchon/ArduinoJson@^7.4.1
 lib_ldf_mode = chain+
 monitor_speed = 115200
 upload_speed = 921600
@@ -26,7 +27,6 @@ build_flags =
     -D ESP32
 lib_deps =
     ${env.lib_deps}
-    plerup/EspSoftwareSerial@^8.2.0
 
 ; ESP8266
 [esp8266]
@@ -36,7 +36,6 @@ build_flags =
     -D ESP8266
 lib_deps =
     ${env.lib_deps}
-    plerup/EspSoftwareSerial@^8.2.0
 
 ; =========================================================
 ;                          BOARDS
