migration to WifiManager. Connection to wifi working

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 build_flags =
 lib_deps =
     bblanchon/ArduinoJson@^7.4.1
+    tzapu/WiFiManager@^2.0.17
 lib_ldf_mode = chain+
 monitor_speed = 115200
 upload_speed = 921600
