--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ default_envs = esp8266
 framework = arduino
 build_flags =
     -O3
+    -USE_API
 lib_deps =
     bblanchon/ArduinoJson@^7.4.1
     tzapu/WiFiManager@^2.0.17
@@ -33,15 +34,11 @@ lib_deps =
 ; ESP8266
 [esp8266]
 platform = espressif8266
-board = d1_mini
+board = d1_mini_lite
 build_flags = 
     -D ESP8266
 lib_deps =
     ${env.lib_deps}
-
-; =========================================================
-;                          BOARDS
-; ========================================================= 
 
 [env:esp32]
 extends = 
@@ -70,6 +67,21 @@ lib_deps =
 
 upload_speed = ${env.upload_speed}
 monitor_speed = ${env.monitor_speed}
+
+[env:esp8266_ota]
+extends = 
+    esp8266
+
+build_flags =
+    ${env.build_flags}
+    ${esp8266.build_flags}
+    -D OTA
+
+lib_deps =
+    ${esp8266.lib_deps}
+
+upload_protocol = espota
+upload_port = 192.168.1.216
 
 ; =========================================================
 ;                          END
