--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ build_flags =
 lib_deps =
     bblanchon/ArduinoJson@^7.4.1
     tzapu/WiFiManager@^2.0.17
+    ftjuh/RCWL_1X05
 lib_ldf_mode = chain+
 monitor_speed = 115200
 upload_speed = 921600
