--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,8 @@ lib_deps =
     bblanchon/ArduinoJson@^7.4.1
     tzapu/WiFiManager@^2.0.17
     ftjuh/RCWL_1X05
+    robtillaart/I2C_LCD@^0.2.4
+
 lib_ldf_mode = chain+
 monitor_speed = 115200
 upload_speed = 921600
