--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,9 @@ default_envs = esp8266
 framework = arduino
 build_flags =
     -O1
-    ; -USE_API
+    -D HOSTNAME='"GreenThing"'
+    -D USE_WIFI
+    #-D USE_API
 lib_deps =
     bblanchon/ArduinoJson@^7.4.1
     tzapu/WiFiManager@^2.0.17
