--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ build_flags =
     -D HOSTNAME='"GreenThing"'
     -D USE_WIFI
     #-D USE_API
+    -D USE_DISPLAY
 lib_deps =
     bblanchon/ArduinoJson@^7.4.1
     tzapu/WiFiManager@^2.0.17
