--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,8 @@ lib_deps =
     robtillaart/I2C_LCD@^0.2.4
     fbiego/ESP32Time@^2.0.6
     https://github.com/DarekParodia/RCWL_1X05
+    adafruit/Adafruit BMP280 Library@^2.6.0
+    https://github.com/adafruit/Adafruit_AHTX0.git
 
 lib_ldf_mode = chain+
 monitor_speed = 115200
