--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ build_flags =
     -D USE_WIFI
     #-D USE_API
     -D USE_DISPLAY
+    -D I2C_SPEED=10000
 lib_deps =
     bblanchon/ArduinoJson@^7.4.1
     tzapu/WiFiManager@^2.0.17
@@ -25,7 +26,6 @@ lib_deps =
     fbiego/ESP32Time@^2.0.6
     https://github.com/DarekParodia/RCWL_1X05
     adafruit/Adafruit BMP280 Library@^2.6.0
-    https://github.com/adafruit/Adafruit_AHTX0.git
 
 lib_ldf_mode = chain+
 monitor_speed = 115200
