i forgot what changes but some changes

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,8 +15,8 @@ framework = arduino
 build_flags =
     -O3
     -D HOSTNAME='"GreenThing"'
-    -D USE_WIFI
-    #-D USE_API
+    ;-D USE_WIFI
+    ;-D USE_API
     -D USE_DISPLAY
     -D I2C_SPEED=10000
 lib_deps =
