general code refactor and some fixes

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,8 +15,8 @@ framework = arduino
 build_flags =
     -O3
     -D HOSTNAME='"GreenThing"'
-    ;-D USE_WIFI
-    ;-D USE_API
+    -D USE_WIFI
+    -D USE_MQTT
     -D USE_DISPLAY
     -D I2C_SPEED=10000
 lib_deps =
@@ -26,6 +26,7 @@ lib_deps =
     fbiego/ESP32Time@^2.0.6
     https://github.com/DarekParodia/RCWL_1X05
     adafruit/Adafruit BMP280 Library@^2.6.0
+    knolleary/PubSubClient@^2.8
 
 lib_ldf_mode = chain+
 monitor_speed = 115200
