--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,10 @@ build_flags =
     -D USE_MQTT
     -D USE_DISPLAY
     -D I2C_SPEED=10000
+    -D MQTT_SERV='"broker.hivemq.com"'
+    -D MQTT_PORT='"1883"'
+    -D MQTT_USER='"user"'
+    -D MQTT_PASS='"pass"'
 lib_deps =
     bblanchon/ArduinoJson@^7.4.1
     tzapu/WiFiManager@^2.0.17
