persistent mqtt credentials

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ build_flags =
     -D USE_DISPLAY
     -D I2C_SPEED=10000
     -D MQTT_SERV='"broker.hivemq.com"'
-    -D MQTT_PORT='"1883"'
+    -D MQTT_PORT=1883
     -D MQTT_USER='"user"'
     -D MQTT_PASS='"pass"'
 lib_deps =
