slight wifi refactor and ota implementation

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ build_flags =
     -D USE_WIFI
     -D USE_MQTT
     -D USE_DISPLAY
+    -D USE_OTA
     -D I2C_SPEED=10000
     -D MQTT_SERV='"broker.hivemq.com"'
     -D MQTT_PORT=1883
@@ -95,7 +96,7 @@ lib_deps =
     ${esp8266.lib_deps}
 
 upload_protocol = espota
-upload_port = 192.168.1.216
+upload_port = 192.168.1.141
 
 ; =========================================================
 ;                          END
