--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ build_flags =
     -D HOSTNAME='"GreenThing"'
     -D USE_WIFI
     -D USE_MQTT
-    -D USE_DISPLAY
+    ; -D USE_DISPLAY
     -D USE_OTA
     -D I2C_SPEED=10000
     -D MQTT_SERV='"broker.hivemq.com"'
@@ -32,6 +32,8 @@ lib_deps =
     https://github.com/DarekParodia/RCWL_1X05
     adafruit/Adafruit BMP280 Library@^2.6.0
     knolleary/PubSubClient@^2.8
+    paulstoffregen/OneWire @ ^2.3.7
+    milesburton/DallasTemperature @ ^3.11.0
 
 lib_ldf_mode = chain+
 monitor_speed = 115200
