--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ default_envs = esp8266
 [env]
 framework = arduino
 build_flags =
+    -std=gnu++17
     -O3
     -D HOSTNAME='"GreenThing"'
     -D USE_WIFI
@@ -24,6 +25,7 @@ build_flags =
     -D MQTT_PORT=1883
     -D MQTT_USER='"user"'
     -D MQTT_PASS='"pass"'
+build_unflags = -std=gnu++11
 lib_deps =
     bblanchon/ArduinoJson@^7.4.1
     tzapu/WiFiManager@^2.0.17
@@ -65,6 +67,9 @@ build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
 
+build_unflags =
+    ${env.build_unflags}
+
 lib_deps =
     ${esp32.lib_deps}
 
@@ -78,6 +83,9 @@ extends =
 build_flags =
     ${env.build_flags}
     ${esp8266.build_flags}
+
+build_unflags =
+    ${env.build_unflags}
 
 lib_deps =
     ${esp8266.lib_deps}
@@ -93,6 +101,9 @@ build_flags =
     ${env.build_flags}
     ${esp8266.build_flags}
     -D OTA
+
+build_unflags =
+    ${env.build_unflags}
 
 lib_deps =
     ${esp8266.lib_deps}
